--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "techne_project"
+name = "rust-iced-examples-mcp"
+authors = ["Debamitro Chakraborti <debamitro@gmail.com>"]
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/debamitro/iced-examples-mcp"
 
 [dependencies]
 techne-mcp = "0.1.0-dev.2"
